[package]
name = "wasmcloud-control-interface"
version = "0.4.2"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmCloud/interfaces"
description = "This library is a convenient API for interacting with the lattice control interface."
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-control-interface"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "control", "ctl"]
categories = ["wasm", "api-bindings"]
# don't include build.rs on crates.io build
exclude = ["build.rs"]

[dependencies]
async-trait = "0.1"
data-encoding = "2.3.1"
chrono = "0.4.19"
cloudevents-sdk = "0.4.0"
futures = "0.3"
log = "0.4.14"
crossbeam-channel = "0.5.1"
nats = "0.13"
ring = "0.16.20"
rmp-serde = "0.15.0"
tokio = {version="1.9", features=["time"]}
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
uuid = {version = "0.8", features  = ["serde", "v4"]}
wascap = "0.6.0"
wasmbus-rpc = "0.3"

[build-dependencies]
weld-codegen = "0.1"
