[package]
name = "wasmcloud-s3"
version = "0.9.0"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "AWS S3 capability provider for the wasmCloud wasm host runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-s3"
readme = "README.md"
keywords = ["webassembly", "wasm", "aws", "wasmcloud", "s3"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wascc-codec = "0.9.0"
log = "0.4.11"
env_logger = "0.7.1"
rusoto_core = { version="0.45.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.45.0", default_features=false, features=["rustls"] }
rusoto_credential = "0.45.0"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"]}
futures = "0.3"
bytes = "0.5"
wasmcloud-actor-core = "0.2.0"
wasmcloud-actor-blobstore = "0.1.0"

[dev-dependencies]
crossbeam = "0.7.3"
crossbeam-utils = "0.7.2"