[package]
name = "wasmcloud-s3"
version = "0.9.3"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "AWS S3 capability provider for the wasmCloud wasm host runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-s3"
readme = "README.md"
keywords = ["webassembly", "wasm", "aws", "wasmcloud", "s3"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
rusoto_core = { version="0.46.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.46.0", default_features=false, features=["rustls"] }
rusoto_credential = "0.46.0"
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"]}
futures = "0.3"
bytes = "1.0"
hyper-proxy = "0.9.0"
hyper = { version = "0.14.0", features = ["runtime"] }
hyper-tls = "0.5.0"
wasmcloud-actor-core = "0.2.0"
wasmcloud-actor-blobstore = "0.2.0"

[dependencies.wasmcloud-provider-core]
version = "0.1.0"
#path = "../../wasmcloud/crates/wasmcloud-provider-core"

[dev-dependencies]
crossbeam = "0.8.0"
crossbeam-utils = "0.8.3"