[package]
name = "graph-actor"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.7.1"
graphguest = { path = "../graphguest" }
serde_json = "1.0.51"
log = "0.4.8"

[profile.release]
# Optimize for small code size
opt-level = "s"
