[package]
name = "wasmcloud-provider-sqldb-postgres"
version = "0.2.0"
description = "Postgres SQL Database capability provider for contract wasmcloud:sqldb"
readme = "README.md"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
futures = "0.3"
log = "0.4"
minicbor = { version = "0.13", features = ["derive", "std", "half"] }
once_cell = "1.8"
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features=["with-bit-vec-0_6", "with-chrono-0_4","with-uuid-0_8", "with-eui48-0_4"]}
bb8-postgres = "0.7"
bit-vec = "0.6"
uuid = "0.8"
#postgres-native-tls = "0.5"
native-tls = "0.2"
toml = "0.5"
wasmcloud-interface-sqldb = "0.5.0"
wasmbus-rpc = "0.8.2"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.3.1"

[[bin]]
name = "sqldb-postgres"
path = "src/main.rs"
