[package]
name = "wasmcloud-provider-sqldb-postgres"
version = "0.3.0"
description = "Postgres SQL Database capability provider for contract wasmcloud:sqldb"
readme = "README.md"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
futures = "0.3"
minicbor = { version = "0.13", features = ["derive", "std", "half"] }
once_cell = "1.8"
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features=["with-bit-vec-0_6", "with-chrono-0_4","with-uuid-0_8", "with-eui48-0_4"]}
bb8-postgres = "0.7"
bit-vec = "0.6"
uuid = "0.8"
native-tls = "0.2"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmbus-rpc = { version = "0.9", features = ["otel"] }
wasmcloud-interface-sqldb = "0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.4.0"

[[bin]]
name = "sqldb-postgres"
path = "src/main.rs"
