[package]
name = "wasmcloud-telnet"
version = "0.1.2"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "A telnet server capability provider for wasmCloud actors"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-telnet"
readme = "README.md"
keywords = ["webassembly", "wasm", "telnet", "wasmcloud"]
categories = ["wasm", "api-bindings", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
telnet = "0.1.4"
ansi-escapes = "0.1.0"
uuid = { version = "0.8", features = ["serde", "v4"]}
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasmcloud-actor-core = "0.2.2"

[dependencies.wasmcloud-provider-core]
version = "0.1.0"
#path = "../../wasmcloud/crates/wasmcloud-provider-core"

[dependencies.wasmcloud-actor-telnet]
version = "0.1.2"
#path = "../../actor-interfaces/telnet/rust"